@@ -1,7 +1,9 @@
 ## Change log
 
 ### 1.0.3
+* Fix - Make the addon compatible with the latest version from TO Search addon
 * Fix - API key and email grabbed from the correct settings tab
+* Fix - Added TO Search as subtab on LSX TO settings page
 
 ### 1.0.2
 * Fix - Fixed all prefixes replaces (to_ > lsx_to_, TO_ > LSX_TO_)
